fix: Activities section now has 3 different layouts on mobile, tablet and desktop

--- a/css/index.css
+++ b/css/index.css
@@ -127,6 +127,8 @@ a {
 /* NAV-BAR */
 .nav-bar {
 	padding : 3rem 1rem 1rem 1rem;
+	max-width : 1200px;
+	margin    : 0 auto;
 }
 .nav-bar-container {
 	display         : flex;
@@ -171,7 +173,9 @@ a {
 }
 
 body > main {
-	padding : 0 3rem;
+	padding   : 0 3rem;
+	max-width : 1200px;
+	margin    : 0 auto;
 }
 
 /* SEARCH FORM */
@@ -399,13 +403,51 @@ body > main {
 	max-height : 100%;
 }
 
-@media (min-width : 480px) {
+@media (min-width : 481px) {
 	#cards-grid {
 		display               : grid;
+		grid-template-columns : repeat(2, 1fr);
+		grid-template-rows    : repeat(20, 1fr);
+		grid-gap              : 3rem;
+		max-height            : 900px;
+	}
+
+	#cards-grid > .card-link:nth-child(1) {
+		grid-row : 1 / 11;
+	}
+	#cards-grid > .card-link:nth-child(2) {
+		grid-row : 1 / 7;
+	}
+	#cards-grid > .card-link:nth-child(3) {
+		grid-row : 7 / 11;
+	}
+	#cards-grid > .card-link:nth-child(4) {
+		grid-row : 11 / 21;
+	}
+	#cards-grid > .card-link:nth-child(5) {
+		grid-row : 11 / 17;
+	}
+	#cards-grid > .card-link:nth-child(6) {
+		grid-row : 17 / 21;
+	}
+
+	#cards-grid > .card-link {
+		margin          : 0;
+		flex-direction  : column;
+		justify-content : stretch;
+	}
+	#cards-grid > .card-link > .card.card-full > .card-thumbnail {
+		flex-grow       : 1;
+		max-height      : calc(100% - 5.5rem);
+		object-fit      : cover;
+		object-position : center center;
+	}
+}
+@media (min-width : 1025px) {
+	#cards-grid {
 		grid-template-columns : repeat(4, 1fr);
 		grid-template-rows    : repeat(10, 1fr);
-		grid-gap              : 3rem;
-		max-height: 450px;
+		max-height            : 450px;
 	}
 
 	#cards-grid > .card-link:nth-child(3n+1) {
@@ -431,10 +473,10 @@ body > main {
 		justify-content : stretch;
 	}
 	#cards-grid > .card-link > .card.card-full > .card-thumbnail {
-		flex-grow  : 1;
-		max-height : calc(100% - 5.5rem);
-		object-fit : cover;
-		object-position: center center;
+		flex-grow       : 1;
+		max-height      : calc(100% - 5.5rem);
+		object-fit      : cover;
+		object-position : center center;
 	}
 }
 
